# simple_android_debloater

./: .env.example  .gitignore  LICENSE.md  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: discussions_dump.yml  main.yml  updater.yml
scripts/: discussions_dump.js  package-lock.json  package.json  updater_template.js
src/: deviceUsersStore.ts  models.ts  notificationStore.ts  packageStore.ts  stores.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-007072b14b2c5a841d491799fd5515d273fe38ddda9a9ab62bee6ec8759812ce.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20230824195146_AddConfigTable.down.sql  20230824195146_AddConfigTable.up.sql
src-tauri/src/: adb.rs  adb_cmd.rs  adb_devices.rs.bak  cache.rs  config.rs  db.rs  devices.rs  err.rs  events.rs  main.rs  packages.rs  sad.rs  store.rs  users.rs
src/lib/: AdbDeviceWithUsers.svelte  BreadCrumbs.svelte  DevicesSidebarDropdown.svelte  DevicesSidebarItems.svelte  FilterAndSearchPackages.svelte  Greet.svelte  NavBar.svelte  NoDeviceBanner.svelte  Notif.svelte  PackagesList.svelte  PackagesList.ts  RefreshDevicesButton.svelte  RefreshPackages.svelte  RefreshPackagesButton.svelte  Sad.svelte  SadError.svelte  SadToast.svelte  Sidebar.svelte  UsersDropdown.svelte  adb.ts  utils.ts
src/lib/config/: models.ts  stores.ts
src/lib/devices/: DevicesSidebarItems.svelte  NoDeviceBanner.svelte  RefreshDevicesButton.svelte  adb.ts  cache.ts  models.ts  stores.ts
src/lib/error/: Error.svelte  SadError.svelte  index.ts  stores.ts
src/lib/notifications/: Notif.svelte  SadToast.svelte  stores.ts
src/lib/users/: UsersDropdown.svelte  models.ts  stores.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/about/: +page.svelte
(+8 files in other folders)
