[package]
name = "simple_android_debloater"
version = "0.1.0"
description = "For Debloating Android Devices"
authors = ["you"]
license = "MIT License"
repository = "https://github.com/thulasi-ram/simple_android_debloater"
default-run = "simple_android_debloater"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
dotenvy= "0.15.7"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "updater", "process-all", "fs-read-file", "fs-write-file", "dialog-all", "shell-open", "http-request", "path-all", "app-all", "notification-all", "devtools"] }
thiserror = "1.0"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
lazy_static = "1.4.0"
log = "^0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
regex = "1.9.4"
futures = "0.3.28"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# [dependencies.tauri-plugin-sql]
# git = "https://github.com/tauri-apps/plugins-workspace"
# branch = "v1"
# features = ["sqlite"] # or "postgres", or "mysql"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "release"
